[package]
name = "borealis"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

[lib]
name = "borealis"
path = "src/lib.rs"

[[bin]]
name = "borealis-query"
path = "src/bin/borealis-query.rs"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures = "0.3"
futures-util = "0.3"
mdns = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "^1.6", features = ["full"]}
dirs = "3.0"
thiserror = "1.0"

[[example]]
name = "cycle-effects"
path = "examples/cycle-effects.rs"

[[example]]
name = "set-effect"
path = "examples/set-effect.rs"